network-policy-sandbox.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: network-policy 
  namespace: default
spec:
  podSelector:   
    matchLabels:
      environment: production
  policyTypes:
    - Ingress
    - Egress 
  ingress:
    - from:
      - podSelector: 
          matchLabels:
            environment: sandbox
  egress:
    - to:
      - podSelector: 
          matchLabels:
            environment: sandbox
